tests/golden/type_errors/recursive_struct_function_parameter.cd
struct Node { acceptNext: fun(Node): number }
